--- a/index.html
+++ b/index.html
@@ -324,12 +324,12 @@
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
                   <img
-                    src="img/4.reviews/avatar.jpg"
-                    alt="Photo: Megan Fox"
+                    src="img/4.reviews/avatar-2.jpg"
+                    alt="Photo: Albert Einstein"
                     class="reviews-slider__avatar"
                   />
-                  <h3 class="reviews-slider__user-name">Megan Fox</h3>
-                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <h3 class="reviews-slider__user-name">Albert Einstein</h3>
+                  <span class="reviews-slider__date">Stayed 28 Aug, 2015</span>
                   <div class="rating">
                     <svg class="icon star">
                       <use xlink:href="img/sprite.svg#star"></use>
@@ -351,15 +351,16 @@
                 </div>
                 <!-- /.reviews-slider__profile -->
                 <p class="reviews-slider__text">
-                  It was very nice hotel with cleanliness. Staff behavior was
-                  good and polite. They welcome us very well. Issue was only
-                  that Lift was not in working and we were allotted to 3rd floor
-                  and amenities articles were in corner of gallery which were
-                  giving bad feeling. Breakfast was good and support of the
-                  staff was also very nice. Location is not good as per
-                  atmosphere, it is very nearby most of the popular places but
-                  self location in a narrow street is not good. Overall it was a
-                  good experience and could recommend.
+                  The Hilton Waikoloa Village is the largest and most
+                  family-friendly resort in the Kailua-Kona area, and is often
+                  referred to as the “Disneyland“ of the Big Island. With 1,200
+                  rooms (most renovated in 2012), three large pool areas,
+                  extensive outdoor grounds and a variety of on-site dining
+                  options, the Hilton Waikoloa is indeed a small village in and
+                  of itself, and a tram and canal boats help guests travel
+                  across the sprawling property. Each of the three towers on the
+                  property has a different style of room decor, but the overall
+                  feel the same: clean and generic.
                 </p>
                 <!-- /.reviews-slider__text -->
               </div>
@@ -370,12 +371,12 @@
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
                   <img
-                    src="img/4.reviews/avatar.jpg"
-                    alt="Photo: Megan Fox"
+                    src="img/4.reviews/avatar-3.jpg"
+                    alt="Photo: Nikola Tesla"
                     class="reviews-slider__avatar"
                   />
-                  <h3 class="reviews-slider__user-name">Megan Fox</h3>
-                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <h3 class="reviews-slider__user-name">Nikola Tesla</h3>
+                  <span class="reviews-slider__date">Stayed 3 Sep, 2017</span>
                   <div class="rating">
                     <svg class="icon star">
                       <use xlink:href="img/sprite.svg#star"></use>
@@ -397,15 +398,12 @@
                 </div>
                 <!-- /.reviews-slider__profile -->
                 <p class="reviews-slider__text">
-                  It was very nice hotel with cleanliness. Staff behavior was
-                  good and polite. They welcome us very well. Issue was only
-                  that Lift was not in working and we were allotted to 3rd floor
-                  and amenities articles were in corner of gallery which were
-                  giving bad feeling. Breakfast was good and support of the
-                  staff was also very nice. Location is not good as per
-                  atmosphere, it is very nearby most of the popular places but
-                  self location in a narrow street is not good. Overall it was a
-                  good experience and could recommend.
+                  An immaculate, art-filled property fronting Wailea beach, the
+                  Four Seasons stands at the pinnacle of the area's resorts,
+                  offering a slew of amenities, spacious rooms -- some with
+                  outstanding views -- and a top-notch staff. It's nearly
+                  perfect, except for an unexceptional spa facility, a cramped
+                  business center, and expensive, though excellent, dining.
                 </p>
                 <!-- /.reviews-slider__text -->
               </div>
