Added style for activities, mobile responsivity

--- a/index.html
+++ b/index.html
@@ -442,28 +442,64 @@
       <div class="container">
         <h2 class="activities__title">Other activities</h2>
         <div class="activities__content">
-          <div class="activities__item">
-            <span class="activities__text">The curious corner of chamarel</span>
-            <a href="#" class="activities__button">Book now</a>
+          <div class="activity activities__item">
+            <img
+              src="img/5.activities/corner.jpg"
+              alt="Activity photo"
+              class="activity__img"
+            />
+            <div class="activity__text">
+              <span class="activity__descr"
+                >The curious corner<br />
+                of chamarel</span
+              >
+              <a href="#" class="activity__button">Book now</a>
+            </div>
           </div>
           <!-- /.activities__item -->
-          <div class="activities__item">
-            <span class="activities__text">Gymkhana club golf course</span>
-            <a href="#" class="activities__button">Book now</a>
+          <div class="activity activities__item">
+            <img
+              src="img/5.activities/golf.jpg"
+              alt="Activity photo"
+              class="activity__img"
+            />
+            <div class="activity__text">
+              <span class="activity__descr"
+                >Gymkhana club golf<br />
+                course</span
+              >
+              <a href="#" class="activity__button">Book now</a>
+            </div>
           </div>
           <!-- /.activities__item -->
-          <div class="activities__item">
-            <span class="activities__text"
-              >Tamarind falls hiking trip - full day
-            </span>
-            <a href="#" class="activities__button">Book now</a>
+          <div class="activity activities__item">
+            <img
+              src="img/5.activities/trip.jpg"
+              alt="Activity photo"
+              class="activity__img"
+            />
+            <div class="activity__text">
+              <span class="activity__descr"
+                >Tamarind falls hiking<br />
+                trip - full day
+              </span>
+              <a href="#" class="activity__button">Book now</a>
+            </div>
           </div>
           <!-- /.activities__item -->
-          <div class="activities__item">
-            <span class="activities__text"
-              >The blue marine discovery quest</span
-            >
-            <a href="#" class="activities__button">Book now</a>
+          <div class="activity activities__item">
+            <img
+              src="img/5.activities/marine.jpg"
+              alt="Activity photo"
+              class="activity__img"
+            />
+            <div class="activity__text">
+              <span class="activity__descr"
+                >The blue marine discovery<br />
+                quest</span
+              >
+              <a href="#" class="activity__button">Book now</a>
+            </div>
           </div>
           <!-- /.activities__item -->
         </div>
