Added packages section, added style for packages

--- a/index.html
+++ b/index.html
@@ -255,6 +255,261 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <section class="packages">
+      <div class="container">
+        <h2 class="packages__title">Other packages</h2>
+        <div class="packages__grid">
+          <div class="big-item packages__item packages__item_big">
+            <img
+              src="img/6.packages/blue-haven.jpg"
+              alt="Photo: Hotel Blue Haven"
+              class="big-item__img packages__img"
+            />
+            <div class="content big-item__content packages__content">
+              <div class="stars">
+                <svg class="icon star">
+                  <use xlink:href="img/sprite.svg#star"></use>
+                </svg>
+                <svg class="icon star">
+                  <use xlink:href="img/sprite.svg#star"></use>
+                </svg>
+                <svg class="icon star">
+                  <use xlink:href="img/sprite.svg#star"></use>
+                </svg>
+                <svg class="icon star">
+                  <use xlink:href="img/sprite.svg#star"></use>
+                </svg>
+                <svg class="icon star">
+                  <use xlink:href="img/sprite.svg#star"></use>
+                </svg>
+              </div>
+              <!-- /.stars -->
+              <h3 class="big-item__title content__title">Hotel Blue Haven</h3>
+              <span class="big-item__description content__description"
+                >Aute quis duis excepteur excepteur ipsum cat eiusmod
+                consectetur enim laborum magna llit. Ipsum est fugiat velit ea
+                llamco do esse ut in veniam sun in onsequat. Aute quis duis
+                epteur excepteur ipsum occaecat eiusmod nsectetur enim laborum
+                magna mollit. Ipsum est fugiat velit ea ullamco do</span
+              >
+              <div class="properties content__properties big-item__properties">
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#geolocation"></use>
+                  </svg>
+                  <span class="properties__txt"
+                    >1749 Wheeler Ridge Delaware</span
+                  >
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#guest"></use>
+                  </svg>
+                  <span class="properties__txt">2 x Guests</span>
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#room"></use>
+                  </svg>
+                  <span class="properties__txt">1 x Room</span>
+                </div>
+                <!-- /.properties__item -->
+              </div>
+              <!-- /.content__properties -->
+              <span class="content__price_old">$ 10,500</span>
+              <div class="content__price">
+                <span class="content__price_new">$ 8,500</span>
+                <a href="#" class="content__button">Book Now</a>
+              </div>
+              <!-- /.content__price -->
+            </div>
+            <!-- /.packages__content -->
+          </div>
+          <!-- /.packages__item big-item-->
+          <div class="packages__item">
+            <img
+              src="img/6.packages/belle-mare.jpg"
+              alt="Photo: LUX* Belle Mare"
+              class="packages__img"
+            />
+            <div class="content packages__content">
+              <h3 class="content__title">LUX* Belle Mare</h3>
+              <div class="properties content__properties">
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#geolocation"></use>
+                  </svg>
+                  <span class="properties__txt"
+                    >1749 Wheeler Ridge Delaware</span
+                  >
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#guest"></use>
+                  </svg>
+                  <span class="properties__txt">2 x Guests</span>
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#room"></use>
+                  </svg>
+                  <span class="properties__txt">1 x Room</span>
+                </div>
+                <!-- /.properties__item -->
+              </div>
+              <!-- /.content__properties -->
+              <span class="content__price_old">$ 8,500</span>
+              <div class="content__price">
+                <span class="content__price_new">$ 3,000</span>
+                <a href="#" class="content__button">Book Now</a>
+              </div>
+              <!-- /.content__price -->
+            </div>
+            <!-- /.packages__content -->
+          </div>
+          <!-- /.packages__item -->
+          <div class="packages__item">
+            <img
+              src="img/6.packages/white-palace.jpg"
+              alt="Photo: White Palace"
+              class="packages__img"
+            />
+            <div class="content packages__content">
+              <h3 class="content__title">White Palace</h3>
+              <div class="properties content__properties">
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#geolocation"></use>
+                  </svg>
+                  <span class="properties__txt"
+                    >1749 Wheeler Ridge Delaware</span
+                  >
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#guest"></use>
+                  </svg>
+                  <span class="properties__txt">2 x Guests</span>
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#room"></use>
+                  </svg>
+                  <span class="properties__txt">1 x Room</span>
+                </div>
+                <!-- /.properties__item -->
+              </div>
+              <!-- /.content__properties -->
+              <span class="content__price_old">$ 10,500</span>
+              <div class="content__price">
+                <span class="content__price_new">$ 9,500</span>
+                <a href="#" class="content__button">Book Now</a>
+              </div>
+              <!-- /.content__price -->
+            </div>
+            <!-- /.packages__content -->
+          </div>
+          <!-- /.packages__item -->
+          <div class="packages__item">
+            <img
+              src="img/6.packages/luxury-place.jpg"
+              alt="Photo: Luxury Place"
+              class="packages__img"
+            />
+            <div class="content packages__content">
+              <h3 class="content__title">Luxury Place</h3>
+              <div class="properties content__properties">
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#geolocation"></use>
+                  </svg>
+                  <span class="properties__txt"
+                    >1749 Wheeler Ridge Delaware</span
+                  >
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#guest"></use>
+                  </svg>
+                  <span class="properties__txt">2 x Guests</span>
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#room"></use>
+                  </svg>
+                  <span class="properties__txt">1 x Room</span>
+                </div>
+                <!-- /.properties__item -->
+              </div>
+              <!-- /.content__properties -->
+              <span class="content__price_old">$ 4,500</span>
+              <div class="content__price">
+                <span class="content__price_new">$ 2,500</span>
+                <a href="#" class="content__button">Book Now</a>
+              </div>
+              <!-- /.content__price -->
+            </div>
+            <!-- /.packages__content -->
+          </div>
+          <!-- /.packages__item -->
+          <div class="packages__item">
+            <img
+              src="img/6.packages/five-star.jpg"
+              alt="Photo: Hotel Five Star"
+              class="packages__img"
+            />
+            <div class="content packages__content">
+              <h3 class="content__title">Hotel Five Star</h3>
+              <div class="properties content__properties">
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#geolocation"></use>
+                  </svg>
+                  <span class="properties__txt"
+                    >1749 Wheeler Ridge Delaware</span
+                  >
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#guest"></use>
+                  </svg>
+                  <span class="properties__txt">2 x Guests</span>
+                </div>
+                <!-- /.properties__item -->
+                <div class="properties__item">
+                  <svg class="icon properties__icon">
+                    <use xlink:href="img/sprite.svg#room"></use>
+                  </svg>
+                  <span class="properties__txt">1 x Room</span>
+                </div>
+                <!-- /.properties__item -->
+              </div>
+              <!-- /.content__properties -->
+              <span class="content__price_old">$ 6,500</span>
+              <div class="content__price">
+                <span class="content__price_new">$ 3,500</span>
+                <a href="#" class="content__button">Book Now</a>
+              </div>
+              <!-- /.content__price -->
+            </div>
+            <!-- /.packages__content -->
+          </div>
+          <!-- /.packages__item -->
+        </div>
+        <!-- /.packages__grid -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.packages -->
     <section
       class="newsletter"
       data-parallax="scroll"
