Fixed style for packages

--- a/index.html
+++ b/index.html
@@ -260,11 +260,13 @@
         <h2 class="packages__title">Other packages</h2>
         <div class="packages__grid">
           <div class="big-item packages__item packages__item_big">
-            <img
-              src="img/6.packages/blue-haven.jpg"
-              alt="Photo: Hotel Blue Haven"
-              class="big-item__img packages__img"
-            />
+            <div class="packages__wrapper big-item__wrapper">
+              <img
+                src="img/6.packages/blue-haven.jpg"
+                alt="Photo: Hotel Blue Haven"
+                class="big-item__img packages__img"
+              />
+            </div>
             <div class="content big-item__content packages__content">
               <div class="stars">
                 <svg class="icon star">
@@ -329,11 +331,13 @@
           </div>
           <!-- /.packages__item big-item-->
           <div class="packages__item">
-            <img
-              src="img/6.packages/belle-mare.jpg"
-              alt="Photo: LUX* Belle Mare"
-              class="packages__img"
-            />
+            <div class="packages__wrapper">
+              <img
+                src="img/6.packages/belle-mare.jpg"
+                alt="Photo: LUX* Belle Mare"
+                class="packages__img"
+              />
+            </div>
             <div class="content packages__content">
               <h3 class="content__title">LUX* Belle Mare</h3>
               <div class="properties content__properties">
@@ -373,11 +377,13 @@
           </div>
           <!-- /.packages__item -->
           <div class="packages__item">
-            <img
-              src="img/6.packages/white-palace.jpg"
-              alt="Photo: White Palace"
-              class="packages__img"
-            />
+            <div class="packages__wrapper">
+              <img
+                src="img/6.packages/white-palace.jpg"
+                alt="Photo: White Palace"
+                class="packages__img"
+              />
+            </div>
             <div class="content packages__content">
               <h3 class="content__title">White Palace</h3>
               <div class="properties content__properties">
@@ -417,11 +423,13 @@
           </div>
           <!-- /.packages__item -->
           <div class="packages__item">
-            <img
-              src="img/6.packages/luxury-place.jpg"
-              alt="Photo: Luxury Place"
-              class="packages__img"
-            />
+            <div class="packages__wrapper">
+              <img
+                src="img/6.packages/luxury-place.jpg"
+                alt="Photo: Luxury Place"
+                class="packages__img"
+              />
+            </div>
             <div class="content packages__content">
               <h3 class="content__title">Luxury Place</h3>
               <div class="properties content__properties">
@@ -461,11 +469,13 @@
           </div>
           <!-- /.packages__item -->
           <div class="packages__item">
-            <img
-              src="img/6.packages/five-star.jpg"
-              alt="Photo: Hotel Five Star"
-              class="packages__img"
-            />
+            <div class="packages__wrapper">
+              <img
+                src="img/6.packages/five-star.jpg"
+                alt="Photo: Hotel Five Star"
+                class="packages__img"
+              />
+            </div>
             <div class="content packages__content">
               <h3 class="content__title">Hotel Five Star</h3>
               <div class="properties content__properties">
