--- a/index.html
+++ b/index.html
@@ -203,9 +203,11 @@
             <div class="booking-card">
               <div class="booking-card__content">
                 <div class="price">
-                  <span class="price__txt">price starts as</span>
+                  <span class="price__txt price__txt_up">price starts as</span>
                   <span class="price__value">$ 8,500</span>
-                  <span class="price__txt">per room / night</span>
+                  <span class="price__txt price__txt_down"
+                    >per room / night</span
+                  >
                 </div>
                 <div class="properties">
                   <div class="properties__item">
@@ -555,7 +557,7 @@
     <!-- /.newsletter -->
     <section class="reviews">
       <div class="container">
-        <h2 class="reviews__title">What people think about us</h2>
+        <h2 class="reviews__title">What people thinks about us</h2>
         <div class="swiper-container reviews-slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -642,9 +644,7 @@
                   extensive outdoor grounds and a variety of on-site dining
                   options, the Hilton Waikoloa is indeed a small village in and
                   of itself, and a tram and canal boats help guests travel
-                  across the sprawling property. Each of the three towers on the
-                  property has a different style of room decor, but the overall
-                  feel the same: clean and generic.
+                  across the sprawling property.
                 </p>
                 <!-- /.reviews-slider__text -->
               </div>
