Fixed style for packages

--- a/index.html
+++ b/index.html
@@ -333,19 +333,21 @@
             <!-- /.packages__content -->
           </div>
           <!-- /.packages__item big-item-->
-          <div class="packages__item">
-            <div class="packages__wrapper">
+          <div class="packages__item packages__item_little little-item">
+            <div class="packages__wrapper little-item__wrapper">
               <img
                 src="img/6.packages/belle-mare.jpg"
                 alt="Photo: LUX* Belle Mare"
-                class="packages__img"
+                class="packages__img little-item__img"
               />
 
               <span class="packages__offer">Flash Offer</span>
             </div>
-            <div class="content packages__content">
-              <h3 class="content__title">LUX* Belle Mare</h3>
-              <div class="properties content__properties">
+            <div class="content packages__content little-item__content">
+              <h3 class="content__title little-item__title">LUX* Belle Mare</h3>
+              <div
+                class="properties content__properties little-item__properties"
+              >
                 <div class="properties__item">
                   <svg class="icon properties__icon">
                     <use xlink:href="img/sprite.svg#geolocation"></use>
@@ -381,19 +383,21 @@
             <!-- /.packages__content -->
           </div>
           <!-- /.packages__item -->
-          <div class="packages__item">
-            <div class="packages__wrapper">
+          <div class="packages__item packages__item_little little-item">
+            <div class="packages__wrapper little-item__wrapper">
               <img
                 src="img/6.packages/white-palace.jpg"
                 alt="Photo: White Palace"
-                class="packages__img"
+                class="packages__img little-item__img"
               />
 
               <span class="packages__offer">Flash Offer</span>
             </div>
-            <div class="content packages__content">
-              <h3 class="content__title">White Palace</h3>
-              <div class="properties content__properties">
+            <div class="content packages__content little-item__content">
+              <h3 class="content__title little-item__title">White Palace</h3>
+              <div
+                class="properties content__properties little-item__properties"
+              >
                 <div class="properties__item">
                   <svg class="icon properties__icon">
                     <use xlink:href="img/sprite.svg#geolocation"></use>
@@ -429,19 +433,21 @@
             <!-- /.packages__content -->
           </div>
           <!-- /.packages__item -->
-          <div class="packages__item">
-            <div class="packages__wrapper">
+          <div class="packages__item packages__item_little little-item">
+            <div class="packages__wrapper little-item__wrapper">
               <img
                 src="img/6.packages/luxury-place.jpg"
                 alt="Photo: Luxury Place"
-                class="packages__img"
+                class="packages__img little-item__img"
               />
 
               <span class="packages__offer">Flash Offer</span>
             </div>
-            <div class="content packages__content">
-              <h3 class="content__title">Luxury Place</h3>
-              <div class="properties content__properties">
+            <div class="content packages__content little-item__content">
+              <h3 class="content__title little-item__title">Luxury Place</h3>
+              <div
+                class="properties content__properties little-item__properties"
+              >
                 <div class="properties__item">
                   <svg class="icon properties__icon">
                     <use xlink:href="img/sprite.svg#geolocation"></use>
@@ -477,19 +483,21 @@
             <!-- /.packages__content -->
           </div>
           <!-- /.packages__item -->
-          <div class="packages__item">
-            <div class="packages__wrapper">
+          <div class="packages__item packages__item_little little-item">
+            <div class="packages__wrapper little-item__wrapper">
               <img
                 src="img/6.packages/five-star.jpg"
                 alt="Photo: Hotel Five Star"
-                class="packages__img"
+                class="packages__img little-item__img"
               />
 
               <span class="packages__offer">Flash Offer</span>
             </div>
-            <div class="content packages__content">
-              <h3 class="content__title">Hotel Five Star</h3>
-              <div class="properties content__properties">
+            <div class="content packages__content little-item__content">
+              <h3 class="content__title little-item__title">Hotel Five Star</h3>
+              <div
+                class="properties content__properties little-item__properties"
+              >
                 <div class="properties__item">
                   <svg class="icon properties__icon">
                     <use xlink:href="img/sprite.svg#geolocation"></use>
