Fixed packages offer

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 alt="Photo: Hotel Blue Haven"
                 class="big-item__img packages__img"
               />
-              <span class="packages__offer">Flash Offer</span>
+              <span class="packages__offer big-item__offer">Flash Offer</span>
             </div>
             <div class="content big-item__content packages__content">
               <div class="stars">
@@ -340,8 +340,9 @@
                 alt="Photo: LUX* Belle Mare"
                 class="packages__img little-item__img"
               />
-
-              <span class="packages__offer">Flash Offer</span>
+              <span class="packages__offer little-item__offer"
+                >Flash Offer</span
+              >
             </div>
             <div class="content packages__content little-item__content">
               <h3 class="content__title little-item__title">LUX* Belle Mare</h3>
@@ -390,8 +391,9 @@
                 alt="Photo: White Palace"
                 class="packages__img little-item__img"
               />
-
-              <span class="packages__offer">Flash Offer</span>
+              <span class="packages__offer little-item__offer"
+                >Flash Offer</span
+              >
             </div>
             <div class="content packages__content little-item__content">
               <h3 class="content__title little-item__title">White Palace</h3>
@@ -440,8 +442,9 @@
                 alt="Photo: Luxury Place"
                 class="packages__img little-item__img"
               />
-
-              <span class="packages__offer">Flash Offer</span>
+              <span class="packages__offer little-item__offer"
+                >Flash Offer</span
+              >
             </div>
             <div class="content packages__content little-item__content">
               <h3 class="content__title little-item__title">Luxury Place</h3>
@@ -490,8 +493,9 @@
                 alt="Photo: Hotel Five Star"
                 class="packages__img little-item__img"
               />
-
-              <span class="packages__offer">Flash Offer</span>
+              <span class="packages__offer little-item__offer"
+                >Flash Offer</span
+              >
             </div>
             <div class="content packages__content little-item__content">
               <h3 class="content__title little-item__title">Hotel Five Star</h3>
